test/parser/struct_keyword_end_of_block.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn error1() -> void {

struct S {
// CHECK: [[# @LINE -1 ]]:1: error: expected '}' at the end of a block
    x: i32,
}

fn error2() -> void {
    let y: i32 = 

struct S2 {
// CHECK: [[# @LINE -1 ]]:1: error: expected expression
// CHECK: [[# @LINE -2 ]]:1: error: expected '}' at the end of a block
    x: i32,
}

// CHECK: StructDecl S
// CHECK-NEXT:   FieldDecl:Int i32 x
// CHECK-NEXT: StructDecl S2
// CHECK-NEXT:   FieldDecl:Int i32 x
// CHECK-NOT: {{.*}}
